fix max width, popup behavior on mobile sizes

--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,7 +1,24 @@
 .popup__close {
-  width: 26px;
+  width: 40px;
   position: absolute;
-  top: -26px;
-  right: -26px;
+  top: -40px;
+  right: -40px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 540px) {
+  .popup__close {
+    width: 26px;
+    top: -26px;
+    right: -26px;
+  }
+}
+
+
+@media screen and (max-width: 320px) {
+  .popup__close {
+    width: 26px;
+    top: -26px;
+    right: -26px;
+  }
 }
