--- a/blocks/popup/__image/popup__image.css
+++ b/blocks/popup/__image/popup__image.css
@@ -9,3 +9,13 @@
   border-radius: 0px;
   width: initial;
 }
+
+
+
+@media screen and (max-width: 380px) {
+  .popup__image-src {
+    max-width: 75vw;
+    max-height: 60vh;
+   
+  }
+}
