--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -3,3 +3,12 @@
   font-size: 24px;
   line-height: 30px;
 }
+
+
+
+@media screen and (max-width: 380px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 18px;  
+  }
+}
