--- a/blocks/root/__section/root__section.css
+++ b/blocks/root/__section/root__section.css
@@ -1,6 +1,7 @@
 .root__section {
   width: calc(100% - 400px);
   margin: auto;
+  max-width: 882px;
 }
 
 @media screen and (max-width: 1000px) {
